--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Historymatic</title>
+    <title>Mountainmatic</title>
     <style>
-      html {
-        box-sizing: border-box;
+      html, body {
+          box-sizing: border-box;
+          background-color: #efefef;
       }
 
       *,
@@ -42,8 +43,8 @@
       }
       .button-container {
         text-align: center;
-      border-left: 30px solid red;
-      border-right: 30px solid red;
+      /* border-left: 30px solid red; */
+      /* border-right: 30px solid red; */
       }
       .button-container.centered {
         position: fixed;
@@ -54,17 +55,17 @@
         display: flex;
         align-items: center;
         justify-content: center;
-      border-left: 30px solid red;
-      border-right: 30px solid red;
+      /* border-left: 30px solid red; */
+      /* border-right: 30px solid red; */
       }
       .button-container.centered button {
         font-size: 16px;
         padding: 10px 18px;
       }
       button {
-      background: #FF0000;
-        border: 1px solid rgba(0,0,0,0.1);
-        color: white;
+          background:  #9F9A94;
+        border: 1px solid rgba(0,0,0,0.4);
+          color:  ##60656B;
         border-radius: 3px;
         padding: 8px 10px;
         cursor: pointer;
@@ -76,15 +77,16 @@
         width: 100%;
       }
       .container {
-      border-left: 30px solid red;
-      border-right: 30px solid red;
+      /* border-left: 30px solid red; */
+      /* border-right: 30px solid red; */
 }
     </style>
+    <link rel="stylesheet" href=bootstrap.min.css">
   </head>
   <body>
     <div class="wrapper">
       <div class="button-container centered">
-        <button id="button">History, please</button>
+        <button id="button">Mountain, please</button>
       </div>
       <div id="container" hidden></div>
     </div>
